devops/k8s/deployment.tpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: _APP_ENV
  name: _APP_NAME
  labels:
    app: _APP_NAME
    env: _APP_ENV
    ver: "_APP_VERSION"
    tags.datadoghq.com/env: "_APP_ENV"
    tags.datadoghq.com/service: "_APP_NAME"
    tags.datadoghq.com/version: "_APP_VERSION"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: _APP_NAME
      env: _APP_ENV
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      namespace: _APP_ENV
      labels:
        app: _APP_NAME
        env: _APP_ENV
        ver: "_APP_VERSION"
        tags.datadoghq.com/env: "_APP_ENV"
        tags.datadoghq.com/service: "_APP_NAME"
        tags.datadoghq.com/version: "_APP_VERSION"
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: _APP_NAME
          image: gcr.io/_PROJECT_ID/_APP_NAME:_APP_VERSION
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: _APP_PORT
          # livenessProbe:
          #   initialDelaySeconds: 2
          #   periodSeconds: 5
          #   httpGet:
          #     path: /livez
          #     port: _APP_PORT
          # readinessProbe:
          #   initialDelaySeconds: 2
          #   periodSeconds: 5
          #   httpGet:
          #     path: /healthz
          #     port: _APP_PORT
          resources:
            requests:
              cpu: 100m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 256M
---
kind: Service
apiVersion: v1
metadata:
  name: _APP_NAME
  namespace: _APP_ENV
  labels:
    app: _APP_NAME
    env: _APP_ENV
    ver: "_APP_VERSION"
spec:
  selector:
    app: _APP_NAME
    env: _APP_ENV
  ports:
    - protocol: TCP
      port: _APP_PORT
      targetPort: _APP_PORT
      name: http
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: _APP_NAME
  namespace: _APP_ENV
spec:
  hosts:
    - "_APP_NAME.flokubernetes.com"
    - "_APP_NAME._APP_ENV.flokubernetes.com"
  gateways:
    - istio-system/default-gateway
  http:
    - route:
        - destination:
            host: _APP_NAME
            port:
              number: _APP_PORT
